[package]
authors = ["Carter David Henning <carterdavidhenning@gmail.com>"]
description = "A command line tool for generating cloze deletions for Anki from a list of sentences."
edition = "2018"
name = "EZ Cloze"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
